<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="tsmc_food">TSMC Food</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="fastest_delivery">Fastest Delivery</string>
    <string name="_24_7">24/7</string>
    <string name="welcome_to_tcmc_food">Welcome To TCMC Food</string>
    <string name="skip_authorization">Skip authorization</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="register_now">Register Now</string>
    <string name="cancel">Cancel</string>
    <string name="incorrect_fullname">The "full name" field must contain at least 2 words, each of which must be in the length range from 3 to 30</string>
    <string name="incorrect_email">email field should not be empty and have the correct format</string>
    <string name="incorrect_password">password field must have a minimum length of 8 and a maximum length of 20</string>
    <string name="incorrect_number">phone number field should not be empty</string>
    <string name="failed_registration">registration failed</string>
    <string name="user_already_exist_error">user with this login already exist</string>
    <string name="failed_authorization">authorization failed</string>
    <string name="name">name</string>
    <string name="price">price</string>
    <string name="no_connection">no connection</string>
    <string name="try_again">try again</string>
    <string name="burgers">Бургеры</string>
    <string name="drinks">Напитки</string>
    <string name="pizza">Пицца</string>
    <string name="chicken">Курица</string>
    <string name="potato">Картофель</string>
    <string name="desserts">Десерты</string>
    <string name="result">Result</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="more">More</string>
    <string name="delivery_info">Delivery info</string>
    <string name="delivery_info_description">Delivered between monday aug and thursday 20 from 8pm to 91:32 pm</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="continue_shop">Continue Shop</string>
    <string name="order">Order</string>
    <string name="select_the_delivery_address">Select the delivery address</string>
    <string name="order_now">Order Now</string>
    <string name="order_price">Order Price</string>
    <string name="no_orders_yet">No orders yet</string>
    <string name="history">History</string>
    <string name="cost">Cost</string>
    <string name="exit">exit</string>
    <string name="authorized_error">you must be logged in</string>
    <string name="address_input_error">invalid address format</string>
    <string name="successs">Success!</string>
    <string name="error">Error</string>
    <string name="repeat_order">Repeat Order</string>
</resources>