<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="19dp"/>

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="240dp"
        android:layout_height="240dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/name"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_product" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:text="@string/price"
        android:textSize="22sp"
        android:layout_marginTop="2dp"/>

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_info"
        app:layout_constraintTop_toBottomOf="@id/tv_price"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="43dp"
        android:textSize="17sp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp" />
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delivery_info_description"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tv_info"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:textColor="@color/text_color"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_frame"
        android:backgroundTint="@color/main_color"
        android:elevation="0dp"
        android:text="@string/add_to_cart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>