<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:elevation="0dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_main"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_marginTop="-30dp"
        android:backgroundTint="@color/card_color"
        app:cardCornerRadius="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/cooking_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:backgroundTint="@color/black"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_main"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/et_full_name"
        app:layout_constraintEnd_toEndOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="@string/full_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/et_phone_number"
        app:layout_constraintEnd_toEndOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_password" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:hint="@string/phone_number"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="@id/et_email"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_full_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"

        android:layout_height="70dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/button_frame"
        android:backgroundTint="@color/main_color"
        android:elevation="0dp"
        android:text="@string/register_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cancel"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_frame"
        android:backgroundTint="@color/main_color"
        android:elevation="0dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>