<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.15"
        android:scaleY="1.15"
        android:src="@drawable/courier_2"
        app:layout_constraintBottom_toTopOf="@id/button_sing_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/italianno_regular"
        android:paddingStart="10dp"
        android:rotation="-25"
        android:text="@string/welcome_to_tcmc_food"
        android:textSize="44sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_main"
        app:layout_constraintEnd_toEndOf="@id/iv_main" />

    <androidx.appcompat.widget.AppCompatButton
        style="?android:borderlessButtonStyle"
        android:id="@+id/button_sing_in"
        android:layout_width="157dp"
        android:layout_height="68dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_frame"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/italianno_regular"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main" />


    <androidx.appcompat.widget.AppCompatButton
        style="?android:borderlessButtonStyle"
        android:id="@+id/button_sign_up"
        android:layout_width="157dp"
        android:layout_height="68dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/button_frame"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/italianno_regular"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/button_sing_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_sing_in"
        app:layout_constraintTop_toTopOf="@id/button_sing_in" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_authorization"
        android:layout_marginBottom="24dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
