<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/tv_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:fontFamily="@font/italianno_regular"
        android:text="@string/order"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:maxLines="3"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/select_the_delivery_address"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_order"
        app:layout_constraintEnd_toStartOf="@id/iv_address"
        app:layout_constraintStart_toEndOf="@id/tv_order"
        app:layout_constraintTop_toTopOf="@id/tv_order" />


    <ImageView
        android:id="@+id/iv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:src="@drawable/ic_address"
        app:layout_constraintBottom_toBottomOf="@id/tv_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_order" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@id/view_price"
        app:layout_constraintTop_toBottomOf="@id/tv_order"
        tools:listitem="@layout/item_order"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


    <View
        android:visibility="invisible"
        android:id="@+id/view_price"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/price_frame"
        app:layout_constraintBottom_toTopOf="@+id/button_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/linear_price"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@id/view_price"
        app:layout_constraintEnd_toEndOf="@id/view_price"
        app:layout_constraintStart_toStartOf="@id/view_price"
        app:layout_constraintTop_toTopOf="@id/view_price">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/order_price"
            android:textColor="@color/white"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:text="20000$$" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:visibility="invisible"
        android:id="@+id/button_order"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_frame"
        android:backgroundTint="@color/main_color"
        android:elevation="0dp"
        android:text="@string/order_now"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ImageView
            android:id="@+id/placeholder_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_order_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/placeholder_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/placeholder_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_orders_yet"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/placeholder_iv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>