<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:text="@string/more"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/iv_back" />

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toStartOf="@id/iv_back"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="2"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintTop_toBottomOf="@id/tv_more"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/price"
            android:textColor="@color/main_color"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_product" />

        <ImageView
            android:id="@+id/button_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="69dp"
            android:src="@drawable/button_minus"
            app:layout_constraintEnd_toStartOf="@id/iv_count"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product" />

        <TextView
            android:id="@+id/iv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:textColor="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@id/button_minus"
            app:layout_constraintEnd_toStartOf="@id/button_plus"
            app:layout_constraintStart_toEndOf="@id/button_minus"
            app:layout_constraintTop_toTopOf="@id/button_minus"
            tools:text="0" />

        <ImageView
            android:id="@+id/button_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_plus"
            app:layout_constraintStart_toEndOf="@id/iv_count"
            app:layout_constraintTop_toTopOf="@id/button_minus"
            android:layout_marginStart="11dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add"
            style="?android:borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/button_frame"
            android:backgroundTint="@color/main_color"
            android:elevation="0dp"
            android:gravity="start|center_vertical"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/iv_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_plus"
            app:layout_constraintTop_toTopOf="@id/button_plus" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/add_to_cart"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/button_add"
            app:layout_constraintStart_toStartOf="@id/button_add"
            app:layout_constraintTop_toTopOf="@id/button_add" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_shopping_cart_contrast"
            app:layout_constraintBottom_toBottomOf="@id/button_add"
            app:layout_constraintEnd_toEndOf="@id/button_add"
            app:layout_constraintTop_toTopOf="@id/button_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>